--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 fastapi
 uvicorn
-requests
-beautifulsoup4
-readability-lxml
-diskcache
-fpdf2
-duckduckgo-search
-python-multipart
 jinja2
+httpx
+beautifulsoup4
+python-multipart
+duckduckgo-search
+readability-lxml
+sumy
+rank-bm25
+rapidfuzz
+numpy
+diskcache
+fpdf
+requests
