--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ jinja2
 httpx
 beautifulsoup4
 python-multipart
-duckduckgo-search==4.9.6
+duckduckgo-search
 readability-lxml
 sumy
 rank-bm25
@@ -13,4 +13,4 @@ numpy
 diskcache
 fpdf
 requests
-deep-translator==1.11.4
+googletrans==4.0.0-rc1
