--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 fastapi
 uvicorn
 jinja2
+httpx
+beautifulsoup4
+python-multipart
+duckduckgo-search
+readability-lxml
+numpy
+diskcache
+fpdf
 requests
 deep-translator
-duckduckgo-search
-sympy
-pint
-nrclex
-beautifulsoup4
