--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-fastapi
-uvicorn
-jinja2
-httpx
-beautifulsoup4
-python-multipart
-ddgs
-readability-lxml
-numpy
-diskcache
-fpdf
-requests
-deep-translator
+fastapi>=0.115.0
+uvicorn[standard]>=0.30.0
+jinja2>=3.1.2
+httpx>=0.27.0
+beautifulsoup4>=4.12.2
+python-multipart>=0.0.9
+ddgs>=1.9.7            # بديل duckduckgo-search
+readability-lxml>=0.8.1
+diskcache>=5.6.3
+fpdf>=1.7.2
+requests>=2.32.3
