--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,4 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <title>Bassam الذكي</title>
-    <style>
-        body { font-family: Tahoma, Arial; direction: rtl; text-align: center; margin: 40px; }
-        .box { border: 1px solid #ddd; padding: 20px; border-radius: 10px; max-width: 500px; margin: auto; background: #f9f9f9; }
-        input[type=text] { width: 90%; padding: 10px; margin-bottom: 10px; border-radius: 5px; border: 1px solid #aaa; }
-        button { background: #007BFF; color: white; border: none; padding: 10px 20px; border-radius: 5px; cursor: pointer; }
-        button:hover { background: #0056b3; }
-        .result { margin-top: 20px; padding: 15px; background: #eef; border-radius: 8px; }
-    </style>
-</head>
-<body>
-    <h2>Bassam الذكي — بحث عربي + تلخيص + أسعار + صور + PDF</h2>
-    <div class="box">
-        <form method="post" action="/">
-            <input type="text" name="q" placeholder="اكتب سؤالك هنا..." required>
-            <br>
-            <button type="submit">بحث</button>
-        </form>
-
-        {% if result %}
-        <div class="result">
-            <h3>النتيجة:</h3>
-            <p>{{ result }}</p>
-        </div>
-        {% endif %}
-    </div>
-    <p style="margin-top:30px;">© Bassam الذكي — يعمل بـ FastAPI</p>
-</body>
-</html>
+fastapi
+uvicorn
+python-multipart
+ddgs
