--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-fastapi
-uvicorn
-python-multipart
-sympy
+fastapi==0.115.0
+uvicorn==0.30.6
+jinja2==3.1.4
+python-multipart==0.0.9
+sympy==1.13.2
+ddgs==1.7.6
