--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-fastapi==0.115.0
-uvicorn==0.30.6
-httpx>=0.28.1
-beautifulsoup4==4.12.3
-python-multipart==0.0.9
-sumy==0.11.0
-rank-bm25==0.2.2
-rapidfuzz==3.9.6
-numpy==1.26.4
-psycopg2-binary==2.9.9
-duckduckgo-search
-sympy==1.13.2
-jinja2==3.1.4
-google-genai
+fastapi
+uvicorn
+httpx
+beautifulsoup4
+jinja2
+python-multipart
+duckduckgo_search
+readability-lxml
+sumy
+rank-bm25
+rapidfuzz
+numpy
+psycopg2-binary
