--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ sumy==0.11.0
 rank-bm25==0.2.2
 rapidfuzz==3.9.6
 numpy==1.26.4
-psycopg2-binary==2.9.9
 duckduckgo-search
 sympy==1.13.2
 jinja2==3.1.4
 google-genai
 sift-stack-py
+psycopg[binary]==3.2.3
